# financial-risk-analyzer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: test.yml
data/: sample_transactions.json
scripts/: generate_synthetic_data.py
src/financial_risk_analyzer/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  fallback.py  llm_analyzer.py  logging_config.py  metrics.py  models.py  pipeline.py  preprocessing.py  summarization.py  validation.py
tests/: conftest.py  test_fallback.py  test_llm_integration.py  test_pipeline.py  test_preprocessing.py  test_summarization.py  test_validation.py
